<resources>
    <string name="app_name">جمع آوری اطلاعات</string>
    <string name="empty" />
    <string name="overwrite_packitems">در صورت دریافت آیتم های جدید ، داده های ذخیره شده در دستگاه حذف خواهد شد. آیا دریافت انجام شود؟</string>
    <string name="hello_world">پست هوایی</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_1">ثبت اطلاعات</string>
    <string name="menu_item_2">گزارشات</string>
    <string name="menu_date">امروز چهارشنبه 29 دی ماه 1394</string>
    <string name="menu_delete">حذف ارسال شده ها</string>
    <string name="menu_update">بروز رسانی برنامه ریزی ها</string>
    <string name="menu_last_update">آخرین بروز رسانی</string>
    <string name="menu_last_update_date">1394/10/29 - 14:30</string>
    <string name="menu_get_setting">دریافت تنظیمات</string>
    <string name="menu_get_items">دریافت آیتم ها</string>
    <string name="menu_get_users">دریافت کاربران</string>
    <string name="menu_get_last_values">دریافت آخرین مقادیر</string>
    <string name="menu_get_base_info">دریافت اطلاعات پایه</string>
    <string name="menu_last_get_base_info">آخرین دریافت</string>
    <string name="menu_last_get_base_info_date">1394/10/29 - 14:30</string>
    <string name="menu_send">ارسال اطلاعات</string>
    <string name="menu_last_send">آخرین ارسال</string>
    <string name="menu_last_send_date">1394/10/29 - 14:30</string>
    <string name="menu_home">صفحه اصلی</string>
    <string name="menu_setting">تنظیمات</string>
    <string name="menu_about_us">درباره دستگاه</string>
    <string name="menu_show_nfc_content">نمایش محتوای تگ NFC</string>
    <string name="menu_exit">خروج</string>
    <string name="login_enter">ورود</string>
    <string name="home_jobs">کار ها</string>
    <string name="home_sherkate_tozie_bargh"><b>شرکت توزیع برق</b></string>
    <string name="home_khorasane_razavi"><b>خراسان رضوی</b></string>
    <string name="home_name"><b>حسن اسکندری</b></string>
    <string name="home_post"><b>اپراتور</b></string>
    <string name="tab_info"><b>اطلاعات</b></string>
    <string name="tab_eyb"><b>عیوب</b></string>
    <string name="tab_picture"><b>عکس</b></string>
    <string name="tab_voice"><b>صدا</b></string>
    <string name="camera_error"><b>این دستگاه دوربین ندارد</b></string>
    <string name="camera_take_pic_failed"><b>عکس برداری انجام نشد</b></string>
    <string name="voice_record">ضبط صدا</string>
    <string name="voice_recording"><b>در حال ضبط</b></string>
    <string name="voice_playing"><b>در حال پخش</b></string>
    <string name="voice_stop"><b>توقف</b></string>
    <string name="voice_play_complete"><b>پایان پخش</b></string>
    <string name="voice_should_delete">برای ضبط مجدد ابتدا باید صدای فعلی را حذف کنید</string>
    <string name="voice_deleted_successfully">فایل صدا با موفقیت حذف گردید</string>
    <string name="voice_delete_yes_no">آیا فایل صدا حذف شود؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="wanna_turn_on_gps">وضعیت GPS دستگاه شما غیر فعال است ، آیا مایلید آنرا فعال کنید؟</string>
    <string name="go_to_gps_setting">برو به صفحه تنظیمات GPS</string>
    <string name="pic_deleted_successfully">فایل عکس با موفقیت حذف گردید</string>
    <string name="pic_delete_yes_no">آیا فایل عکس حذف شود؟</string>
    <string name="eyb_deleted_successfully">عیب مورد نظر با موفقیت حذف گردید</string>
    <string name="eyb_deleted_unsuccess">حذف عیب با مشکل مواجه شد</string>
    <string name="eyb_delete_yes_no">آیا عیب مورد نظر حذف شود؟</string>
    <string name="fa_aya_hazf_shavad">آیا مورد انتخابی حذف شود؟</string>
    <string name="fa_bale">بله</string>
    <string name="fa_kheyr">خیر</string>
    <string name="fa_hazf">حذف</string>
    <string name="custom_menu_item_tbxFullName">توضیحات</string>
    <string name="custom_menu_item_Tozihat">توضیحات</string>
    <string name="custom_ws_dialog_title">تنظیمات</string>
    <string name="sabt">ثبت</string>
    <string name="enseraf">انصراف</string>
    <string name="ws_default_address">http://192.168.3.130:8012/Service1.svc</string>
    <string name="update_version_1">این نسخه نیاز به بروز رسانی دارد</string>
    <string name="update_version_2">برای دریافت نسخه جدید روی تصویر زیر کلیک کنید</string>
    <string name="update_version_3">در حال دریافت و نصب نسخه جدید</string>
    <string name="txt1">موقعيت استقرار نامناسب است</string>
    <string name="txt2">وضعيت استقرار پايه نامناسب است</string>
    <string name="txt3">فوندانسيون نامناسب است</string>
    <string name="txt4">نياز به ترميم دارد</string>
    <string name="txt5">نياز به تعويض دارد</string>
    <string name="txt6">نياز به رنگ آميزي دارد</string>
    <string name="txt7">نياز به دريچه دارد</string>
    <string name="txt8">نياز به احداث اتصال زمين دارد</string>
    <string name="txt9">اتصال زمين نياز به اصلاح دارد</string>
    <string name="txt10">وضعيت اتصال کابل نامناسب است</string>
    <string name="txt11">نوع چراغ نامناسب است</string>
    <string name="txt12">وضعيت استقرار چراغ نا مناسب است</string>
    <string name="txt13">زاويه تابش درست نيست</string>
    <string name="txt14">نياز به سرويس و شست و شو دارد</string>
    <string name="txt15">نياز به حباب دارد</string>
    <string name="txt16">نياز به پاترون دارد</string>
    <string name="txt17">نياز به راه انداز دارد</string>
    <string name="txt18">نياز به چوک دارد</string>
    <string name="txt19">نياز به خازن دارد</string>
    <string name="txt20">اقدام اصلاحي مورد نياز</string>
    <string name="txt21">نوع چراغ</string>
    <string name="txt22">توضيحات</string>
    <string name="txt23">پيشنهادات</string>
    <string name="txt24">نوع پایه</string>
    <string name="txt25">فیدر اصلی</string>
    <string name="about_app">نرم افزار اندروید</string>
    <string name="about_app_name"><b>جمع آوری اطلاعات</b></string>
    <string name="about_app_version">نسخه 1.0.0</string>
    <string name="about_app_published_by">توسعه یافته توسط</string>
    <string name="about_app_publisher"><b>شرکت سنجش افزار آسیا</b></string>
    <string name="about_app_imei_title">شماره انحصاری دستگاه</string>
    <string name="about_text">شرکت سنجش افزار آسیا در سال 1378 با هدف طراحی و ساخت تجهیزات و نرم افزارهای مورد نیاز صنایع در اداره ثبت شرکتها و مالکیت صنعتی در تهران به شماره 156843 به ثبت رسیده است. این شرکت از همان ابتدا با هدف ایجاد سازمانی تحقیقاتی و تولیدی جهت تبدیل ایده های برتر به محصولات تجاری در زمینه سیستمهای مورد نیاز صنعت آب ، برق و گاز فعالیت خود را آغاز نمود و در زمانی کمتر از یکسال دستگاه تست کنتور برق را که سالها در حد یک ایده و نیاز در وزارت نیرو بود ، به محصول تجاری تبدیل نمود . اين شركت در زمينه طراحي و توليد اين دستگاه داراي گواهي فعاليت صنعتي از وزارت صنايع به شماره 21488/01 و همچنين داراي پروانه ثبت اختراع از اداره ثبت شركتها و مالكيت صنعتي به شماره 26269 مي باشد.
سنجش افزار آسیا در حال حاضر با بهره گيری از بخش های بازرگانی ، مالی و اداری ، تحقیق و توسعه نرم افزار ، تحقیق و توسعه الکترونیک ، کیفیت (QA/QC) ، تحقیق و توسعه بازار و پشتیبانی و خدمات پس از فروش و بیش از هشتاد نفر پرسنل و کارشناس فني مشغول به فعالیت مي باشد.</string>
    <string name="ez_noeetesalzamin">نوع اتصال زمین</string>
    <string name="ez_noetajhizmansoobe">نوع تجهیز منصوبه</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RegisterPreviuse">ثبت و قبلی</string>
    <string name="MessageForSettingTime">خارج از بازه ساعتی تعیین شده</string>
    <string name="MessageForSettingCount">در این دوره اندازه گیری برای این آیتم داده ثبت شده</string>
    <string name="MessageForValidText">لطفا اطلاعات را وارد کنید.</string>
    <string name="Cancel">انصراف</string>
    <string name="RegisterNext">ثبت و بعدی</string>
    <string name="Msg_CheckDate">لطفا تاریخ را بدرستی وارد کنید</string>
    <string name="Msg_CheckTime">لطفا زمان را بدرستی وارد کنید</string>
    <string name="Msg_CheckDateTime">برای ثبت باید هر دو مقدار تاریخ و زمان بدرستی وارد شود</string>
    <string name="Msg_CheckRegisterTime">برای ثبت باید زمان بدرستی وارد شود</string>
    <string name="Msg_CheckRegisterDate">برای ثبت باید تاریخ بدرستی وارد شود</string>
    <string name="NoDataLogical">داده منطقی مورد نظر در جدول پایه وجود ندارد</string>
    <string name="NoDataRemark">داده های ریمارک مورد نظر در جدول پایه وجود ندارد</string>
    <string name="Msg_CountItemForCalculate">تعداد آیتم ها برای انجام محاسبات کافی نیست</string>
    <string name="Msg_SendDataFromServerFail">اطلاعات ارسالی از سرور برای این آیتم ناقص می باشد</string>
    <string name="Msg_NoDataInLastCor">مقداری در دوره های قبل ثبت نشده است</string>
    <string name="Msg_DivForConstNumber">مقدار صفر برای عدد ثابت قابل قبول نیست</string>
    <string name="Detail">جزییات</string>
    <string name="UnitWithParam">واحد : %s</string>
    <string name="LogshitwithParam">لاگشیت : %s</string>
    <string name="EquipWithParam">تجهیز : %s</string>
    <string name="SubEquipWithParam">زیرتجهیز : %s</string>
    <string name="UnitmeasurementWithParam">واحد اندازه گیری : %s</string>
    <string name="CountDataWithParam">تعداد داده های وارد شده : %s</string>
    <string name="AllowNumberWithParam">تعداد مجاز : %s</string>
    <string name="CodeItemWithParam">کد آیتم : %s</string>
    <string name="Secondlimitation">محدوده دوم</string>
    <string name="MinWitParam">حداقل : %s</string>
    <string name="MaxWithParam">حداکثر : %s</string>
    <string name="Thirdlimitation">محدوده سوم</string>
    <string name="ZaribWithParam">ضریب : %s</string>
    <string name="Close">بستن</string>
    <string name="Msg_NfcTag1">برای وارد شدن باید بعد از کلیک
پشت دستگاه را به تگ NFC نزدیک کنید </string>
    <string name="Msg_FillItem">ظرفیت آیتم پر شده است</string>
    <string name="AllItem">همه موارد</string>
    <string name="NotRegister">ثبت نشده</string>
    <string name="Registered">ثبت شده</string>
    <string name="DisplayValues">نمایش مقادیر</string>
    <string name="DisplayRemark">نمایش ریمارک</string>
    <string name="ReportItem">گزارش آیتم </string>
    <string name="Msg_NfcTag2">خواندن تگ NFC</string>
    <string name="Msg_NfcTag3">لطفا پشت دستگاه را به تگ نزدیک کنید</string>
    <string name="Msg_NfcTag4">عملیات شناسایی با موفقیت انجام شد</string>
    <string name="Msg_NfcTag5">تجهیز مورد نظر یافت نشد</string>
    <string name="WiFiNoconnected">وایفای قطع است</string>
    <string name="WifiOn">لطفا ابتدا وایفای را روشن کنید</string>
    <string name="ConnectToNetWork">و به شبکه متصل شوید</string>
    <string name="UpdateSetting">در حال بروزرسانی تنظیمات</string>
    <string name="PleaseWait">لطفا شکیبا باشید ...</string>
    <string name="PleaseWaitForOtherItem">لطفا تا پایان یافتن بروزرسانی دیگر صبر کنید</string>
    <string name="UpdateItem">در حال بروزرسانی آیتم ها</string>
    <string name="GetItemBeforeSend">امکان دریافت آیتم ها قبل از تخلیه دستگاه امکان پذیر نمی باشد</string>
    <string name="UpdateUser">در حال بروزرسانی اطلاعات کاربران</string>
    <string name="UpdateLastData">در حال بروزرسانی آخرین مقادیر</string>
    <string name="SendItem">در حال ارسال آیتم ها</string>
    <string name="GetSetting">لطفا ابتدا تنظیمات را دریافت کنید</string>
    <string name="Msg_NfcTag6">سریال تگ قابل خواندن نیست</string>
    <string name="Msg_NfcTag7">سطح تگ معتبر نیست</string>
    <string name="SettingUpdating">تنظیمات بروزرسانی شد</string>
    <string name="FromDate"> از تاریخ : </string>
    <string name="FromTime">از ساعت : </string>
    <string name="ToDate"> تا تاریخ : </string>
    <string name="ToTime">تا ساعت : </string>
    <string name="Register">ثبت</string>
    <string name="FilterK">فیلتر کردن</string>
    <string name="Date_Layout">تاریخ</string>
    <string name="Time_Layout">ساعت</string>
    <string name="Value">مقدار</string>
	<string name="TypeConection">ارتباط از طریق Wifi</string>
    <string name="pref_ws_address">آدرس ارتباطی وب سرویس</string>
    <string name="Msg_pref_ws_address">لطفا آدرس ارتباطی وب سرویس را وارد کنید</string>
    <string name="TitleSortType">نوع مرتب سازی آیتم ها</string>
    <string name="Search">جستجو...</string>
</resources>