<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_vertical"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imgUpVersion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:scaleType="centerCrop"
        android:src="@drawable/about_us_header_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgGooglePlus"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:src="@drawable/google_plus_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgEmail"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:src="@drawable/email_icon" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgFacebook"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon" />

        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/about_app"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/about_app_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtPublishBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/about_app_published_by"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtPublisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/about_app_publisher"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/about_app_version"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/txtDeviceIMEI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/about_app_imei_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtIMEINumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/about_app_publisher"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</LinearLayout>