<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"  >

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="#444444"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/llFilterHistory"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/login_edittext"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/txtFilterHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FilterK"
                android:textSize="19sp"
                android:textColor="#000000"
                android:layout_marginLeft="4dp"/>
            <ImageView
                android:id="@+id/imgFilterHistory"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/filter"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/edtSearchItemHistory"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/Search"
            android:inputType="text"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_width="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#777777"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:background="#444444"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRowNumberTitleReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="#"
                android:textColor="#FFFFFF"
                android:textSize="22dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="0.4"
            android:background="#444444"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDateTitleReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Date_Layout"
                android:textColor="#FFFFFF"
                android:textSize="22dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="0.2"
            android:background="#444444"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTimeTitleReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Time_Layout"
                android:textColor="#FFFFFF"
                android:textSize="22dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="0.3"
            android:background="#444444"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtValueTitleReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Value"
                android:textColor="#FFFFFF"
                android:textSize="22dp" />
        </LinearLayout>






    </LinearLayout>

    <ListView
        android:id="@+id/lstItemHistory"
        android:layout_weight="1"
        tools:listitem="@layout/custom_item_history"
        android:layout_height="0dp"
        android:layout_width="match_parent">

    </ListView>

    <LinearLayout
        android:id="@+id/llMinMaxReport"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
    </LinearLayout>

</LinearLayout>