<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/ir.saa.android.datalogger"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right|center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:gravity="right|center_vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtItemFromDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/FromDate"
                android:textColor="#111111"
                android:textSize="22sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="right|center_vertical"
            android:orientation="vertical" >

            <mycomponents.MaskedEditText
                android:id="@+id/edtItemFromDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:textDirection="anyRtl"
                android:textSize="18sp"
                android:inputType="number"
                app:mask="####/##/##" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:gravity="right|center_vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtItemFromTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/FromTime"
                android:textColor="#111111"
                android:textSize="22sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="right|center_vertical"
            android:orientation="vertical" >

            <mycomponents.MaskedEditText
                android:id="@+id/edtItemFromTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textDirection="anyRtl"
                android:gravity="center"
                android:textSize="18sp"
                android:inputType="number"
                app:mask="##:##" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:gravity="right|center_vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtItemToDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/ToDate"
                android:textColor="#111111"
                android:textSize="22sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="right|center_vertical"
            android:orientation="vertical" >

            <mycomponents.MaskedEditText
                android:id="@+id/edtItemToDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:textSize="18sp"
                android:textDirection="anyRtl"
                android:inputType="number|date"
                app:mask="####/##/##" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:gravity="right|center_vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtItemToTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/ToTime"
                android:textColor="#111111"
                android:textSize="22sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center_vertical"
            android:orientation="vertical" >

            <mycomponents.MaskedEditText
                android:id="@+id/edtItemToTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="anyRtl"
                android:ems="10"
                android:gravity="center"
                android:textSize="18sp"
                android:inputType="number"
                app:mask="##:##" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>